# orthanc-gcp-storage

./: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: build.yml  ubuntu-release.yml
scripts/: orthanc.json
src/: gcp.rs  lib.rs  orthanc.rs  orthanc_plugin.rs  plugin.cpp  util.rs
